--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -12,8 +12,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/Banner"
-    android:textSize="26dp"
-    android:textFontWeight=
+    android:textSize="26sp"
+    android:textStyle="bold"
     android:layout_marginTop="24dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +24,7 @@
         android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_marginTop="100dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -36,17 +37,18 @@
         android:text="@string/username"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomO="@id/banner"
+        app:layout_constraintTop_toBottomOf="@id/banner"
         />
     <EditText
         android:id="@+id/usernameinput"
         android:layout_width="0dp"
         android:layout_weight="0.7"
         android:layout_height="48dp"
+        android:inputType="text"
         app:layout_constraintStart_toEndOf="@id/username"
         app:layout_constraintTop_toBottomOf="@id/banner"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
         android:background="@drawable/edittextborder"
         />
 
@@ -67,7 +69,7 @@
             android:text="@string/email"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/banner"
+            app:layout_constraintTop_toBottomOf="@id/username"
             />
         <EditText
             android:id="@+id/emailInput"
@@ -76,9 +78,9 @@
             android:inputType="textEmailAddress"
             android:layout_height="48dp"
             app:layout_constraintStart_toEndOf="@id/username"
-            app:layout_constraintTop_toBottomOf="@id/banner"
+            app:layout_constraintTop_toBottomOf="@id/usernameinput"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
             android:background="@drawable/edittextborder"
             />
     </LinearLayout>
@@ -109,27 +111,80 @@
             app:layout_constraintStart_toEndOf="@id/username"
             app:layout_constraintTop_toBottomOf="@id/banner"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
             android:background="@drawable/edittextborder"
             />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/layout4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@id/layout3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal">
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/male"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/female"/>
+
+        </RadioGroup>
+    </LinearLayout>
+
     <Button
         android:id="@+id/register"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_marginTop="40dp"
         android:text="@string/register"
+        android:textSize="24sp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/layout3"
+        app:layout_constraintTop_toBottomOf="@id/layout4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
 
-    <view
+    <View
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_marginBottom="20dp"
         android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/register" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@id/line"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/accountHolder"
+        android:textSize="24sp"
+        android:layout_marginTop="10dp"/>
+    <TextView
+        android:id="@+id/loginR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/login"
+        android:textSize="24sp"
+        android:textStyle="bold|italic"
+        android:textColor="@color/lightBlue"
+        android:layout_marginTop="10dp"/>
+
+</LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
