--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="amethyst">#3a2769</color>
     <color name="lightBlue">#00A5E0</color>
+    <color name="red">#dc143c</color>
 </resources>
