--- a/app/src/main/res/layout/activity_user_profile_screen.xml
+++ b/app/src/main/res/layout/activity_user_profile_screen.xml
@@ -100,4 +100,66 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
+    <LinearLayout
+        android:id="@+id/navbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="2.0"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <ImageButton
+            android:id="@+id/diary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:background="@color/lightBlue"
+            android:layout_margin="2dp"
+            android:src="@drawable/utensils_solid_full"
+            />
+
+        <ImageButton
+            android:id="@+id/bodyfat"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:layout_margin="2dp"
+            android:src="@drawable/weight_scale_solid_full"
+            android:background="@color/lightBlue"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <ImageButton
+            android:id="@+id/healthinfo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:layout_margin="2dp"
+            android:src="@drawable/heart_solid_full"
+            android:background="@color/lightBlue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <ImageButton
+            android:id="@+id/history"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:layout_margin="2dp"
+            android:src="@drawable/history"
+            android:background="@color/lightBlue"
+            />
+
+        <ImageButton
+            android:id="@+id/profile"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:layout_margin="2dp"
+            android:src="@drawable/user_solid_full"
+            android:background="@color/lightBlue"
+            app:layout_constraintTop_toBottomOf="@id/saveCalories" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
